--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Frontend Mentor | Interactive card details form</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
+    <!-- <style>
       .attribution {
         font-size: 11px;
         text-align: center;
@@ -28,14 +28,21 @@
       .attribution a {
         color: hsl(228, 45%, 44%);
       }
-    </style>
+    </style> -->
   </head>
   <body>
-    <div class="container">
-      <div class="left"></div>
-      <div class="right"></div>
-    </div>
-    <div class="attribution">
+    <main>
+      <div class="container">
+        <div class="left_section">
+          <div class="cards">
+            <div class="front_card">
+              <img src="./images/bg-card-front.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <!-- <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
         Frontend Mentor
@@ -43,7 +50,7 @@
       . Coded by
       <a href="#">Elly van der Togt</a>
       .
-    </div>
+    </div> -->
   </body>
 </html>
 
