--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <div class="left_section">
           <div class="cards">
             <div class="front_card">
-              <img src="./images/bg-card-front.png" alt="" />
+              <img src="./images/bg-card-front.png" alt="front-card" />
+              
             </div>
           </div>
         </div>
